attempt to fix image sizing on ios again

--- a/src/templates/portfolio_item.css
+++ b/src/templates/portfolio_item.css
@@ -22,6 +22,7 @@ hr.divider {
 
 .splash {
   max-width: 100%;
+  height: auto;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -44,6 +45,14 @@ hr.divider {
 
   .portfolio-container{
     width: 60%;
+  }
+
+  .splash {
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
 
    .featured {
